# Bank-Client-Server-System

./: README.md
Database/: Cassandra.cql  bank_database.sql  users.json
Node-Red Flow/: Check Admin Privileges.js  Check Credentials.js  Construct SQL.js  Create New User.js  Delete User.js  Get Account Balance.js  Get Account Number.js  Get Bank Database.js  Get Transaction History.js  Make Transaction.js  Make Transfer.js  Parse Incoming Message Payload Function.js  Parse JSON Data Function.js  Parse JSON Data.js  Parse Received Data Function.js  Parse Request.js  Parses Incoming JSON Payload.js  Update User.js  flows.json
QT Applications/Client2/: CMakeLists.txt  client.cpp  client.h  main.cpp
QT Applications/Client3/: CMakeLists.txt  client.cpp  client.h  main.cpp
QT Applications/Server2/: CMakeLists.txt  main.cpp  noderedclient.cpp  noderedclient.h  server.cpp  server.h
QT Applications/Server3/: CMakeLists.txt  main.cpp  server.cpp  server.h
QT Applications/build-Client2-Desktop_Qt_6_5_3_MinGW_64_bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt.prev  build.ninja  cmake_install.cmake
QT Applications/build-Client3-Desktop_Qt_6_5_3_MinGW_64_bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  CMakeCache.txt.prev  build.ninja  cmake_install.cmake
QT Applications/build-Server2-Desktop_Qt_6_5_3_MinGW_64_bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt.prev  build.ninja  cmake_install.cmake
QT Applications/build-Server3-Desktop_Qt_6_5_3_MinGW_64_bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  CMakeCache.txt.prev  build.ninja  (+1 more)
UML/: 00-UseCase.vsd
(+72 files in other folders)
